tests-integration/tests/roundtrip/invalid/semantic/typecheck/int_var_in_bool_expr/tree-sitter.expected-error.txt
tests/roundtrip/invalid/semantic/typecheck/int_var_in_bool_expr/int_var_in_bool_expr.essence:3:11:
  |
3 | such that x \/ y
  |           ^
Type error:
	Expected: bool
	Got: int